@@ -5,6 +5,9 @@ Changes in version 0.1.2.7-alpha - 2007-??-??
       is now.
     - Add some defensive programming to eventdns.c in an attempt to catch
       possible memory-stomping bugs.
+    - Previously, we would cache up to 16 old networkstatus documents
+      indefinitely, if they came from nontrusted authorities.  Now we
+      discard them if they are more than 10 days old.
 
 
 Changes in version 0.1.2.6-alpha - 2007-01-09
